--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ bcrypt = "^4.0.1"
 bard = "^0.1"
 psycopg2-binary = "^2.9.9"
 Flask-SocketIO = "^5.3.6"
+Flask-SSLify = "^0.1.5"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
